Bug Fixes: landing page quote fits screen on very small resolutions. services page is aligned in the center, doesn't overflow and aspect ratio is better maintained on all screen sizes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ body {
   opacity: 0.95;
   position: fixed;
   display: grid;
-  grid: 5rem calc(15rem + 7vw) / 1fr 2fr 1fr;
+  grid: 5rem calc(16rem + 6vw) / 1fr 2fr 1fr;
   grid-template-areas:
   "logo .... menu"
   "list list list"
@@ -103,7 +103,7 @@ input[type="checkbox"] {
 }
 
 input[type="checkbox"]:checked + .menu {
-  max-height: calc(15rem + 7vw);
+  max-height: calc(16rem + 6vw);
   transition: max-height .2s ease-in;
 }
 
@@ -126,7 +126,7 @@ input[type="checkbox"]:checked + .menu {
 .menu-icon {
   grid-area: menu;
   place-self: center center;
-  font-size: calc(1.5rem + 2vw);
+  font-size: calc(1.5rem + 1.5vw);
 }
 
 .nav-icon {
@@ -192,13 +192,13 @@ input[type="checkbox"]:checked + .menu {
 
 .hero-title {
   color: var(--clr-primary);
-  font-size: calc(1.5rem + 5.5vw);
+  font-size: calc(1.2rem + 5.5vw);
 }
 
 .hero-subtitle {
   color: var(--clr-secondary);
   font-weight: lighter;
-  font-size: calc(.8rem + 1.5vw);
+  font-size: calc(.7rem + 1.5vw);
   padding-left: .3vw;
 }
 
@@ -210,7 +210,7 @@ input[type="checkbox"]:checked + .menu {
 
 .hero-quote blockquote {
   color: var(--clr-primary);
-  font-size: calc(.35rem + 3vw);
+  font-size: calc(.3rem + 3vw);
 }
 
 .hero-quote .bq1 {
@@ -382,7 +382,7 @@ input[type="checkbox"]:checked + .menu {
 
 .film-link, .music-link {
   display: grid;
-  width: calc(160px + 25vw);
+  width: calc(160px + 40vw);
   max-width: 360px;
   height: auto;
   justify-self: center;
@@ -433,9 +433,9 @@ input[type="checkbox"]:checked + .menu {
 .reviews {
   grid-area: quotes;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   justify-content: center;
-  padding-top: calc(1rem + 2vw);
+  padding-top: calc(16px + 2vw);
   font-family: var(--ff-primary);
   padding: 0% 2.5% 2.5% 2.5%;
 }
@@ -445,13 +445,13 @@ input[type="checkbox"]:checked + .menu {
 }
 
 .music-links, .film-links, .reviews {
-  row-gap: calc(1rem + 2.5vw);
+  row-gap: calc(16px + 2.5vw);
 }
 
 .review {
   display: grid;
-  width: calc(10rem + 40vw);
-  max-width: 22.5rem;
+  width: calc(160px + 40vw);
+  max-width: 360px;
   height: auto;
   justify-self: center;
   place-content: start start;
@@ -507,14 +507,14 @@ input[type="checkbox"]:checked + .menu {
 .service {
   border: 2px solid var(--clr-bg);
   border-radius: 8px;
-  width: calc(160px + 40vw);
-  max-width: 360px;
+  width: calc(164px + 40vw);
+  max-width: 364px;
   height: auto;
   justify-self: center;
   padding-bottom: 10px;
   font-size: calc(.8rem + 1vw);
   display: grid;
-  grid: 240px 5rem auto / auto;
+  grid: calc(80px + 35vw) 5rem auto / 100%;
   grid-template-areas:
   "img"
   "header"
@@ -524,8 +524,8 @@ input[type="checkbox"]:checked + .menu {
 
 .service img {
   grid-area: img;
-  width: auto;
-  height: 240px;
+  width: 100%;
+  height: calc(80px + 35vw);
 }
 
 .service .header1, .service .header2, .service .header3, 
@@ -535,7 +535,6 @@ input[type="checkbox"]:checked + .menu {
   font-family: var(--ff-secondary);
   grid-area: header;
   width: auto;
-  height: 5rem;
   max-height: 5rem;
   cursor: pointer;
   display: grid;
@@ -575,7 +574,7 @@ input[type="checkbox"]:checked + .menu {
 
 .service label {
   letter-spacing: 2px;
-  font-size: calc(1rem + 1.2vw);
+  font-size: calc(1.2rem + 1vw);
 }
 
 .service p {
@@ -882,6 +881,21 @@ button[type="submit"]:active {
 
 /*----------------------- MEDIA QUERIES -----------------------*/
 
+@media (min-width: 475px) {
+  .service {
+    grid: 240px 5rem auto / 360px;
+    grid-template-areas:
+    "img"
+    "header"
+    "description"
+    ;
+  }
+
+  .service img {
+    height: 240px;
+  }
+}
+
 @media (min-width: 768px) {
   .about-main {
     font-size: 1.2rem;
@@ -893,6 +907,10 @@ button[type="submit"]:active {
 
   .service {
     font-size: 1.2rem;
+  }
+
+  .service img {
+    max-height: 240px;
   }
 
   .service label {
@@ -954,7 +972,7 @@ button[type="submit"]:active {
   }
 
   .about-page {
-    grid: 5rem repeat(2, auto) / 1fr 40% 2.5% 40% 1fr;
+    grid: 5rem repeat(2, auto) / 1fr 40% 1.5% 40% 1fr;
     grid-template-areas:
     "nav    nav    nav    nav    nav"
     "header header header header header"
